<resources>
    <string name="app_name">ToDoApp</string>
    <string name="open_menu">Open menu</string>
    <string name="more_options">open options</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="task_title">Task title</string>
    <string name="date_s_not_chosen">Date is not chosen</string>
    <string name="set_date">Set date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="task_description">Task description</string>
    <string name="go_back">Back</string>
    <string name="delete">Delete</string>
    <string name="move_to_important">Make the task important</string>
    <string name="add_subtask">Add subtask</string>
    <string name="mark_completed">Mark completed</string>
    <string name="new_subtask">New subtask</string>
    <string name="save">Save</string>
    <string name="mark_incompleted">Mark incompleted</string>
    <string name="task_updated">Task has been updated</string>
    <string name="undo">Undo</string>
    <string name="task_deleted">Task has been deleted</string>
    <string name="done">Done</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_importance">Sort by importance</string>
</resources>